--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,7 @@ time, mark, audio, video {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    padding: 0 20vw;
 }
 
 .title {
@@ -59,4 +60,13 @@ time, mark, audio, video {
     font-weight: bold;
     width: 5vw;
     height: 5vh;
+    border-radius: 15px;
+}
+
+.text {
+    text-align: center;
+}
+
+.question {
+    margin-bottom: 2vh;
 }
